src/objects/Test_Method__c.object
<CustomObject>
    <fields>
        <fullName>Parameters__c</fullName>
        <formula>QA_Spec__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parameters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Spec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Spec</label>
        <referenceTo>QA_Spec__c</referenceTo>
        <relationshipLabel>Test Method</relationshipLabel>
        <relationshipName>Test_Method</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Description__c</fullName>
        <label>Test Description</label>
        <type>TextArea</type>
    </fields>
    <label>Test Method</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Test_Description__c</columns>
        <columns>Parameters__c</columns>
        <columns>QA_Spec__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Method Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Method</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>